--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ license = "NVPLv7+"
 [dependencies]
 cli-clipboard = "0.4.0"
 knuffel = "3.0.0"
+memoize = { version = "0.4.0", features = ["full"] }
 miette = { version = "5.7.0", features = ["fancy"] }
 url = "2.3.1"
 wildmatch = "2.1.1"
