--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -7,7 +7,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: cachix/install-nix-action@v12
       - name: Building package
-        run: nix-build . -A defaultPackage.x86_64-linux
+        run:  nix-build . -A defaultPackage.x86_64-linux
+      - uses: actions/upload-artifact@v3
+        with:
+          name: url-eater-x86_64-linux
+          path: result/bin/url-eater
