--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -11,7 +11,9 @@ jobs:
       - uses: cachix/install-nix-action@v12
       - name: Building package
         run:  nix-build . -A defaultPackage.x86_64-linux
+      - name: Get commit hash
+        run:  echo "COMMIT_HASH=${GITHUB_SHA::6}" >> $GITHUB_ENV
       - uses: actions/upload-artifact@v3
         with:
-          name: url-eater-x86_64-linux
+          name: url-eater-${{ env.COMMIT_HASH }}-x86_64-linux
           path: result/bin/url-eater
