Fix regression introduced in 4b0b4ef; add tests

--- a/.github/workflows/build_nix.yml
+++ b/.github/workflows/build_nix.yml
@@ -27,3 +27,5 @@ jobs:
       - uses: cachix/install-nix-action@v23
       - name: Lint
         run: nix develop --command cargo clippy --all-targets --all-features
+      - name: Test
+        run: nix develop --command cargo test
