--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,8 @@ arboard = { version = "3.3.0", features = ["wayland-data-control"] }
 knuffel = "3.0.0"
 memoize = { version = "0.4.0", features = ["full"] }
 miette = { version = "5.7.0", features = ["fancy"] }
-url = "2.3.1"
+url = "2.5.0"
 wildmatch = "2.1.1"
+
+[dev-dependencies]
+pretty_assertions = "1.4.0"
